<resources>
    <string name="app_name">Random Pizza App</string>
    <string name="menu_traditional">Traditional Pizza</string>
    <string name="menu_360">360° Randomize</string>
    <string name="menu_message">Pizza is Awesome !!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_dark_theme">Dark Theme</string>
    <string name="switch_on">Dark</string>
    <string name="switch_off">Light</string>
    <string name="logo_description">App logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button_pizza">Pizzame</string>
    <string name="radio_title">Ingredients number:</string>
    <string name="radio_text_1">1</string>
    <string name="radio_text_2">2</string>
    <string name="radio_text_3">3</string>
    <string name="radio_text_4">4</string>
    <string name="filters_title">Add some filters: </string>
    <string name="filter_add">ADD</string>
    <string name="popup_filters_title">Select categories that will not be showed:</string>
    <string name="popup_filters_vegetali">Vegetables</string>
    <string name="popup_filters_salumi">Meat</string>
    <string name="popup_filters_pesce">Fish</string>
    <string name="popup_filters_formaggi">Cheese</string>
    <string name="popup_filters_frutta">Fruit</string>
    <string name="popup_filters_spezie">Seasoning</string>
    <string name="popup_filters_salse">Sauces</string>
    <string name="olive">Olives</string>
    <string name="zucchine">Zucchini</string>
    <string name="melanzane">Eggplant</string>
    <string name="peperoni">Peppers</string>
    <string name="speck">Speck</string>
    <string name="prosciutto_cotto">Cooked ham</string>
    <string name="prosciutto_crudo">Raw ham</string>
    <string name="salame_piccante">Pepperoni</string>
    <string name="mozzarella_di_bufala">Buffalo mozzarella</string>
    <string name="scamorza_affumicata">Smoked scamorza</string>
    <string name="taleggio">Taleggio cheese</string>
    <string name="brie">Brie cheese</string>
    <string name="salmone">Salmon</string>
    <string name="tonno">Tuna</string>
    <string name="frutti_di_mare">Seafood</string>
    <string name="acciughe">Anchovies</string>
    <string name="pesto_alla_genovese">Genovese pesto</string>
    <string name="panna">Cream</string>
    <string name="pesto_di_pistacchi">Pistachio pesto</string>
    <string name="pere">Pear</string>
    <string name="mele">Apple</string>
    <string name="ananas">Ananas</string>
    <string name="origano">Oregano</string>
    <string name="rosmarino">Rosemary</string>
    <string name="aglio">Garlic</string>
    <string name="peperoncino">Chili pepper</string>
    <string name="asparagi">Asparagus</string>
    <string name="friarelli">Friarelli</string>
    <string name="rucola">Rocket salad</string>
    <string name="carciofi">Artichokes</string>
    <string name="funghi_porcini">Porcini mushrooms</string>
    <string name="funghi_champignon">Champignon mushrooms</string>
    <string name="zucca">Pumpkin</string>
    <string name="patatine_fritte">Fries</string>
    <string name="patate_lesse">Potatoes</string>
    <string name="cipolla">Onion</string>
    <string name="capperi">Capers</string>
    <string name="fiori_di_zucca">Zucchini flowers</string>
    <string name="pistacchi">Pistachios</string>
    <string name="radicchio">Chicory</string>
    <string name="fagioli">Beans</string>
    <string name="mais">Corn</string>
    <string name="noci">Walnuts</string>
    <string name="cime_di_rapa">Turnip greens</string>
    <string name="pomodori_secchi">Dried tomatoes</string>
    <string name="salame_dolce">Sweet salami</string>
    <string name="salsiccia">Sausage</string>
    <string name="nduja">Nduja</string>
    <string name="pancetta">Bacon</string>
    <string name="bresaola">Bresaola</string>
    <string name="uovo">Egg</string>
    <string name="mortadella">Mortadella</string>
    <string name="wurstel">Wurstel</string>
    <string name="capocollo">Capocollo</string>
    <string name="lardo">Lard</string>
    <string name="gorgonzola">Gorgonzola</string>
    <string name="parmigiano">Parmesan</string>
    <string name="emmenthal">Swiss cheese</string>
    <string name="burrata">Burrata</string>
    <string name="stracciatella">Stracciatella</string>
    <string name="fontina">Fontina</string>
    <string name="gamberetti">Shrimps</string>
    <string name="surimi">Surimi</string>
    <string name="anelli_di_calamari">Squid rings</string>
    <string name="basilico">Basil</string>
    <string name="pomodorini">Cherry tomatoes</string>
    <string name="vegetali">Vegetables</string>
    <string name="salumi">Meat</string>
    <string name="formaggi">Cheese</string>
    <string name="pesce">Fish</string>
    <string name="salse">Sauces</string>
    <string name="frutta">Fruit</string>
    <string name="spezie">Seasoning</string>
    <string name="americana">Americana</string>
    <string name="boscaiola">Boscaiola</string>
    <string name="quattro_formaggi">4 Formaggi</string>
    <string name="quattro_stagioni">4 Stagioni</string>
    <string name="tonno_cipolla">Tonno e cipolla</string>
    <string name="vegetariana">Vegetariana/Ortolana</string>
    <string name="parmigiana">Parmigiana</string>
    <string name="parma">Parma</string>
    <string name="diavola">Diavola</string>
    <string name="pugliese">Pugliese</string>
    <string name="romana">Romana</string>
    <string name="napoli">Napoli</string>
    <string name="prosciutto_funghi">Prosciutto e funghi</string>
    <string name="monzese">Monzese</string>
    <string name="bufalina">Bufalina</string>
    <string name="trevigiana">Trevigiana</string>
    <string name="tirolese">Tirolese</string>
    <string name="calzone_margherita">Calzone margherita</string>
    <string name="calzone_farcito">Calzone farcito</string>
    <string name="pizza_frutti_di_mare">Frutti di mare</string>
    <string name="bismarck">Bismarck</string>
    <string name="norvegese">Norvegese</string>
    <string name="genovese">Genovese</string>
    <string name="primavera">Primavera</string>
    <string name="speck_zola">Speck e zola</string>
    <string name="margherita">Margherita</string>
    <string name="marinara">Marinara</string>
    <string name="capricciosa">Capricciosa</string>
    <string name="salsiccia_patate">Salsiccia e patate</string>
    <string name="salsiccia_friarelli">Salsiccia e friarelli</string>
    <string name="menu_good_pizza">Good Pizza</string>
    <string name="button_show_ingredients">SHOW INGREDIENTS</string>
    <string name="welcome_title">Three levels of randomization:</string>
    <string name="welcome_traditional">Randomize traditional pizza</string>
    <string name="welcome_360">Randomize everything</string>
    <string name="welcome_good">Randomize everything..but make it good</string>
    <string name="description_good">Good pizza menu image</string>
    <string name="description_pizza">Traditional pizza menu image</string>
    <string name="description_360">360° menu image</string>
    <string name="too_many_filters">You\'re gonna eat nothing!\nPlease remove some filters.</string>
    <string name="theme_changed">Theme changed</string>
    <string name="lang_changed">Language changed</string>
    <string name="english">ENG</string>
    <string name="italian">ITA</string>
    <string name="menu_ita_language">Italian</string>
</resources>